# storyboard

./: .env  .gitignore  AUTO_DISCOVERY_INVENTORY.md  CONTRIBUTING.md  FRONTEND_BACKEND_TESTING_GUIDE.md  Makefile  README.md  SETUP_COMPLETE.md  STARTUP_GUIDE.md  alembic.ini  docker-compose.yml  env.example  legal-sim-cursor-prompts.md  pyproject.toml  pytest.ini  requirements-temporal.txt  run_tests.py  simple_api_gateway.py  start_api_gateway.py  story_prompts.md  test_api_endpoints.py  test_evidence_api_integration.py  test_evidence_integration.py  test_renders_integration.py  test_setup.py
.cursor/: rules.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  determinism-check.yml
agents/intake-triage/: main.py
agents/timeline-reconciliation/: main.py
alembic/: env.py
alembic/versions/: 0001_init.py  0002_chain_of_custody.py
config/policy-packs/: opa-policies.rego
config/rbac-policies/: case.yaml  cerbos.yaml  evidence.yaml  export.yaml  render.yaml  storyboard.yaml
database/schemas/: 01_init.sql
docs/: INTEGRATION_CHECKLIST.md  LEGAL_SIM_ARCH.md  TEMPORAL_INTEGRATION.md
docs/launch/: checklist.md
infrastructure/docker/services/: api-gateway.Dockerfile  evidence-processor.Dockerfile  render-orchestrator.Dockerfile  storyboard-service.Dockerfile  temporal-event-bridge.Dockerfile  temporal-worker.Dockerfile  timeline-compiler.Dockerfile
legal_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitoring/alerts/: legal-sim-alerts.yaml
monitoring/dashboards/: system-health-dashboard.json
scripts/: start_ai_agent_worker.py  start_event_bridge.py  start_temporal_event_bridge.py  start_temporal_server.sh  start_temporal_worker.py  test_temporal_integration.py
scripts/launch/: preflight_check.py
services/: __init__.py  evidence_processor  render_orchestrator  timeline_compiler
services/api-gateway/: main.py
services/api-gateway/middleware/: audit.py
services/api-gateway/routers/: cases.py  evidence.py  renders.py  storyboards.py
services/api_gateway/: main.py
services/api_gateway/middleware/: auth.py  mode_enforcer.py
services/api_gateway/routers/: cases.py  evidence.py  export.py  renders.py  storyboards.py
services/evidence-processor/: main.py
services/evidence-processor/pipelines/: audio_pipeline.py  document_pipeline.py  video_pipeline.py
services/evidence_processor/pipelines/: audio_pipeline.py  document_pipeline.py  video_pipeline.py
services/render-orchestrator/: __init__.py  main.py
services/render-orchestrator/implementations/: __init__.py
services/shared/: __init__.py  config.py  database.py  http_client.py
services/shared/db/: __init__.py  session.py
services/shared/events/: __init__.py  event_factory.py  temporal_event_bridge.py
services/shared/factories/: asr_factory.py  ocr_factory.py  renderer_factory.py  storage_factory.py
services/shared/interfaces/: asr.py  event_bus.py  ocr.py  policy.py  renderer.py  storage.py
services/shared/middleware/: request_context.py
services/shared/models/: case.py  database_models.py  evidence.py  render.py  storyboard.py  timeline.py
services/shared/policy/: middleware.py
services/shared/repositories/: __init__.py  base.py  cases.py  evidence.py  (+1 more)
services/storyboard-service/: __init__.py  main.py
services/storyboard_service/: storyboard-service
services/timeline-compiler/: main.py
tests/: README.md  __init__.py  conftest.py  requirements-test-lite.txt  requirements-test.txt
tests/compliance/: test_policy_compliance.py
tests/determinism/: test_render_determinism.py
tests/e2e/: test_case_creation_flow.py  test_happy_path.py  test_happy_path_simple.py
tests/integration/: test_evidence_pipeline.py  test_evidence_upload.py  test_gateway_evidence.py  test_storage_pipeline.py
tests/performance/: test_load_scenarios.py
tests/unit/: test_models.py  test_policy_middleware.py  test_policy_middleware_standalone.py
tools/cli/: legal_sim_cli.py
web/case-dashboard/: .env  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+115 files in other folders)
